# twitter-video-dl-for-sc

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  twitter-video-dl-for-sc.py  twitter-video-dl-server.py  twitter-video-dl.py
browser_extension/twitter-video-dl-send/: background.js  manifest.json  popup.html  popup.js
ci/: update_pyproject_version.py
pytest-html/: report.html
src/twitter_video_dl/: RequestDetails.json  settings.json  twitter_video_dl.py
src/twitter_video_dl/sandbox/: get_token.py
tests/: TestVideoDownloader.py  TestVideos.json  TestVideos.toml  TestVideosForShortcuts.json  download_video_for_sc_from_json.py  test_comprehensive_comparison.py  test_data.toml  test_download_video_for_sc.py  test_get_tokens.py  test_graphql_api.py  test_syndication_api.py
