# Project basic configuration (uv-based)
# Project metadata compliant with PEP 621
[project]
name = "twitter-video-dl-for-sc"
version = "0.3.2"
description = "This project is based on the original code of the inteoryx/twitter-video-dl project, which allows users to download Twitter videos as MP4 files using Python, FFmpeg and URLs without the need for API keys. I forked this project for use in iOS Shortcuts application."
authors = [
    {name = "7rikazhexde", email = "33836132+7rikazhexde@users.noreply.github.com"}
]
license = {text = "Unlicense"}
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "requests>=2.31.0",
    "curl-cffi>=0.7.0",
]

# Development dependencies
[project.optional-dependencies]
dev = [
    "ruff>=0.13.3",
    "ffmpeg-python>=0.2.0",
    "pre-commit>=3.4.0",
    "tomlkit>=0.12.1",
    "pytest>=7.4.3",
    "pytest-mock>=3.12.0",
]

# Project URL links
[project.urls]
Homepage = "https://github.com/7rikazhexde/twitter-video-dl-for-sc"
Repository = "https://github.com/7rikazhexde/twitter-video-dl-for-sc.git"

# Build system configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatchling configuration (package structure specification)
[tool.hatch.build.targets.wheel]
packages = ["src/twitter_video_dl"]

# Ruff configuration
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "browser_extension",
    "demo",
    "output",
]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501"]
per-file-ignores = {}

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
